--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": "src",
+   "baseUrl": ".",
+   "paths": {
+  "@domain/*": ["../../packages/domain/src/*"],
+  "@events/*": ["../../packages/events/src/*"]
+  },
     "outDir": "dist",
     "esModuleInterop": true,
     "strict": true
